--- a/scss/sections/_states.scss
+++ b/scss/sections/_states.scss
@@ -2,9 +2,13 @@
 	position: absolute;
 	width: 100%;
 	height: 100%;
-	min-height: 600px;
 	overflow-x: hidden;
 	overflow-y: hidden;
+
+	min-height: 600px;
+	.small-screen & {
+		min-height: 0;
+	}
 
 	top: 0;
 	left: 50%;
@@ -89,7 +93,7 @@
 		.small-screen & {
 			width: $states-graph-width-small;
 			height: 50%;
-			bottom: $states-containers-bottom-small;
+			bottom: calc(#{$ui-mobile-footer-height}px + #{$ui-mobile-caption-height});
 			margin-left: -$states-graph-width-small/2;
 			min-height: 200px;
 		}
