--- a/scss/variables-derived.scss
+++ b/scss/variables-derived.scss
@@ -23,7 +23,6 @@ $states-backgrounded-top: -10%;
 $states-backgrounded-duration-in: 1.5;
 $states-backgrounded-duration-out: 1.5;
 $states-containers-bottom: 10%;
-$states-containers-bottom-small: 30rem;
 $states-highlighted-in: 0;
 $states-highlighted-out: 0.2;
 $actions-backgrounded-scale: 0.7;
@@ -41,6 +40,8 @@ $emotions-panX-delay: 0.25;
 $emotions-scale-in-delay: 0.65;
 $ui-header-height: 55;
 $ui-header-height-small: 44;
+$ui-mobile-footer-height: 44;
+$ui-mobile-caption-height: 15rem;
 $ui-scrollbar-introOpenDelay: 1.5;
 $ui-scrollbar-closeDelay: 0.2;
 $ui-overlays-duration-in: 1;
